--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First Githun Repo</title>
 </head>
 <body>
-    
+    <h1>I can push to github</h1>
+    <h2>More paragraph</h2>
 </body>
 </html>
